--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             </div>
         </div>
     </div>
-<h3>SoutOut to Sandra Tomiwa!!!</h3> 
 </body>
-
+<h3>ShoutOut to Sandra Tomiwa!!!</h3> 
+<h3>ShoutOut to Sandra Tomiwa!!!</h3> 
+<h3>ShoutOut to Sandra Tomiwa!!!</h3> 
+<h3>ShoutOut to Sandra Tomiwa!!!</h3> 
 </html>
