--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </div>
     </div>
 </body>
+<h3>ShoutOut to Sandra Kehinde Tomiwa!!!</h3> 
 <h3>ShoutOut to Sandra Tomiwa!!!</h3> 
 <h3>ShoutOut to Sandra Tomiwa!!!</h3> 
-<h3>ShoutOut to Sandra Tomiwa!!!</h3> 
-<h3>ShoutOut to Sandra Tomiwa!!!</h3> 
+<h3>ShoutOut to Sandra Kehinde Tomiwa!!!</h3> 
 </html>
