--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
                             <div class="step-icon">
                                 <img src="img/cloneWhite.svg">
                             </div>
-                            <div class="step-text"><a href="https://go.microsoft.com/fwlink/?linkid=862409">Clone your code repository and start developing your application on IDE of your choice</a></div>
+                            <div class="step-text"><a href="https://go.microsoft.com/fwlink/?linkid=862409">Kenny Test</a></div>
                         </div>
                         <div class="step">
                             <div class="step-icon">
                                 <img src="img/deployWhite.svg">
                             </div>
-                            <div class="step-text"><a href="https://go.microsoft.com/fwlink/?linkid=862410">View your CI/CD pipeline on Visual Studio Team Services and customize it as per your needs</a></div>
+                            <div class="step-text"><a href="https://go.microsoft.com/fwlink/?linkid=862410">Kenny Test</a></div>
                         </div>
                         <div class="step">
                             <div class="step-icon">
                                 <img src="img/stackWhite.svg">
                             </div>
-                            <div class="step-text"><a href="http://portal.azure.com">View your service stack in the Azure Portal</a></div>
+                            <div class="step-text"><a href="http://portal.azure.com">Kenny Test</a></div>
                         </div>
                         <div class="step">
                             <div class="step-icon">
